--- a/index.template.html
+++ b/index.template.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head><title>Hello</title></head>
+  <head>
+    <!-- 三括号不转义 -->
+    {{{ meta }}}
+    <!-- 双括号转义 -->
+    <title>{{ title }}</title>
+  </head>
   <body>
     <!--vue-ssr-outlet-->
   </body>
