--- a/Lesson-5/client-build/index.html
+++ b/Lesson-5/client-build/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="/client-build/main.171927c1.css" rel="stylesheet"></head>
+<link href="http://pngpypvw2.bkt.clouddn.com/main.2f3dec43.css" rel="stylesheet"></head>
 
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="/client-build/bundle.b2258525.js"></script><script type="text/javascript" src="/client-build/vendors~main.71593090.js"></script><script type="text/javascript" src="/client-build/main.b1aad8ab.js"></script></body>
+<script type="text/javascript" src="http://pngpypvw2.bkt.clouddn.com/bundle.4bc6c85b.js"></script><script type="text/javascript" src="http://pngpypvw2.bkt.clouddn.com/vendors~main.71593090.js"></script><script type="text/javascript" src="http://pngpypvw2.bkt.clouddn.com/main.8fb1c7b1.js"></script></body>
 
 </html>
